--- a/wp-content/themes/dpm/languages/en_US.po
+++ b/wp-content/themes/dpm/languages/en_US.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpm\n"
-"POT-Creation-Date: 2014-09-20 21:47+0300\n"
-"PO-Revision-Date: 2014-09-20 21:48+0300\n"
+"POT-Creation-Date: 2014-09-27 21:56+0300\n"
+"PO-Revision-Date: 2014-09-27 22:06+0300\n"
 "Last-Translator: \n"
 "Language-Team: dpm <dpm@gmail.com>\n"
 "Language: English\n"
@@ -16,59 +16,208 @@ msgstr ""
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPath-1: ..\n"
 
-#: ../index.php:17
+#: ../archive.php:13 ../footer.php:43 ../index.php:18
+msgid "НОВОСТИ"
+msgstr "NEWS"
+
+#: ../archive.php:23
+msgid "Дата публикации:"
+msgstr "Date of publication:"
+
+#: ../archive.php:29 ../index.php:41 ../index.php:46 ../index.php:58
+#: ../index.php:90 ../index.php:93 ../index.php:95 ../index.php:109
+#: ../index.php:113 ../index.php:133
+msgid "подробнее"
+msgstr "read more"
+
+#: ../footer.php:7
+msgid "ГЛАВНАЯ"
+msgstr "MAIN"
+
+#: ../footer.php:10
+msgid "КАФЕДРА"
+msgstr "DEPARTMENT"
+
+#: ../footer.php:11
+msgid "О КАФЕДРЕ"
+msgstr "ABOUT"
+
+#: ../footer.php:12
+msgid "ИСТОРИЯ"
+msgstr "HISTORY"
+
+#: ../footer.php:13
+msgid "ОБРАЗОВАНИЕ"
+msgstr "EDUCATION"
+
+#: ../footer.php:16
+msgid "СОТРУДНИКИ"
+msgstr "EMPLOYEES"
+
+#: ../footer.php:17
+msgid "ПРЕПОДАВАТЕЛИ"
+msgstr "LECTURERES"
+
+#: ../footer.php:18
+msgid "НАУЧНЫЕ СОТРУДНИКИ"
+msgstr "RESEARCH WORKERS"
+
+#: ../footer.php:19
+msgid "АСПИРАНТЫ"
+msgstr "POSTGRADUATE STUDENTS"
+
+#: ../footer.php:24
+msgid "СТУДЕНТЫ"
+msgstr "STUDENTS"
+
+#: ../footer.php:25
+msgid "ЛУЧШИЕ РАБОТЫ"
+msgstr "BEST WORKS"
+
+#: ../footer.php:26
+msgid "ПРАКТИКА"
+msgstr "PRACTICE"
+
+#: ../footer.php:27
+msgid "КОНКУРСЫ"
+msgstr "COMPETITIONS"
+
+#: ../footer.php:28
+msgid "ТРУДОУСТРОЙСТВО"
+msgstr "EMPLOYMENT"
+
+#: ../footer.php:29
+msgid "ВАКАНСИИ"
+msgstr "VACANCIES"
+
+#: ../footer.php:30
+msgid "МАТЕРИАЛЫ"
+msgstr "DOWNLOADS"
+
+#: ../footer.php:33
+msgid "НАУКА"
+msgstr "SCIENCE"
+
+#: ../footer.php:34
+msgid "ЖУРНАЛ"
+msgstr "JOURNAL"
+
+#: ../footer.php:35
+msgid "ПРОЕКТЫ"
+msgstr "PROJECTS"
+
+#: ../footer.php:38
+msgid "СПЕЦ. СОВЕТ"
+msgstr "SPEC. COUNCIL"
+
+#: ../footer.php:39
+msgid "СОСТАВ"
+msgstr "MEMBERSHIP"
+
+#: ../footer.php:40
+msgid "СПЕЦИАЛЬНОСТИ"
+msgstr "SPECIALTIES"
+
+#: ../footer.php:46
+msgid "КОНТАКТЫ"
+msgstr "CONTACTS"
+
+#: ../footer.php:49
+msgid "Кафедра ДПМ"
+msgstr "Department DSM "
+
+#: ../footer.php:49
+msgid "Все права защищены &copy; 2011"
+msgstr "All rights reserved  &copy;2011"
+
+#: ../footer.php:50
+msgid "Дизайн и разработка"
+msgstr "Design & development by "
+
+#: ../footer.php:50
+msgid "Тарасюк Денис"
+msgstr "Denis Tarasyuk"
+
+#: ../sidebar-cat.php:4
+msgid "Кафедра"
+msgstr "Department"
+
+#: ../header.php:5
+msgid "НТУ “ХПИ”"
+msgstr "NTU “KhPI”"
+
+#: ../header.php:6
+msgid "Инженерно-физический факультет"
+msgstr " Physical Engineering Faculty"
+
+#: ../header.php:7
+msgid "Кафедра динамики и прочности машин"
+msgstr "Department of Dynamics and Strength of Machines"
+
+#: ../index.php:18
 msgid "ПОСЛЕДНИЕ"
 msgstr "LAST"
 
-#: ../index.php:17
-msgid "НОВОСТИ"
-msgstr ""
-
-#: ../index.php:25
+#: ../index.php:26 ../sidebar.php:18
 msgid "все новости"
-msgstr ""
+msgstr "all news"
 
-#: ../index.php:40 ../index.php:45 ../index.php:89 ../index.php:92
-#: ../index.php:94 ../index.php:108 ../index.php:112
-msgid "подробнее"
-msgstr ""
+#: ../index.php:34
+msgid "КАФЕДРА <strong>&laquo;ДПМ&raquo;</strong>"
+msgstr "DEPARTMENT <strong>&laquo;DSM&raquo;</strong>"
 
-#: ../index.php:54
+#: ../index.php:55
 msgid "<strong>СБОРНИК</strong> НАУЧНЫХ ТРУДОВ</h5>"
-msgstr ""
+msgstr "PROC. OF SCIENTIFIC WORKS"
 
-#: ../index.php:56
+#: ../index.php:57
 msgid "Сборник научных трудов &quot;Динамика и прочность машин&quot;"
 msgstr ""
 
-#: ../index.php:58
+#: ../index.php:59
 msgid "Доступные выпуски журнала:"
-msgstr ""
+msgstr "Available issues of the journal:"
 
-#: ../index.php:83
+#: ../index.php:84
 msgid "<strong>ОБРАЗОВАНИЕ</strong> НА КАФЕДРЕ"
-msgstr ""
+msgstr "<strong>EDUCATION</strong>  AT THE DEPARTMENT"
 
-#: ../index.php:104
+#: ../index.php:105
 msgid "СПЕЦ. СОВЕТ И <strong>СОТРУДНИКИ</strong>"
-msgstr ""
+msgstr "SPEC. COUNCIL AND<strong> EMPLOYEES</strong>"
 
-#: ../index.php:113
+#: ../index.php:114
 msgid "Сотрудники кафедры:"
-msgstr ""
-
-#: ../index.php:115
-msgid "Преподаватели"
-msgstr ""
+msgstr "Employees of the department:"
 
 #: ../index.php:116
-msgid "Научные сотрудники"
-msgstr ""
+msgid "Преподаватели"
+msgstr "Lecturers"
 
 #: ../index.php:117
-msgid "Аспиранты"
-msgstr ""
+msgid "Научные сотрудники"
+msgstr "Research workers"
 
-#: ../index.php:125
+#: ../index.php:118
+msgid "Аспиранты"
+msgstr "Postgraduata students"
+
+#: ../index.php:126
 msgid "<strong>СТУДЕНТЫ</strong> КАФЕДРЫ</h5>"
-msgstr ""
+msgstr "<strong>STUDENTS</strong>  OF THE DEPARTMENT"
+
+#: ../index.php:128
+msgid "Практика студентов:"
+msgstr "Practice of students:"
+
+#: ../index.php:134
+msgid "Последние лучшие работы студентов:"
+msgstr "The latest best students' works:"
+
+#: ../index.php:140
+msgid "все работы"
+msgstr "all works"
+
+#: ../sidebar.php:4
+msgid "ПОСЛЕДНИЕ НОВОСТИ"
+msgstr "THE LATEST NEWS"
